# llm-rx-chat

./: .env.example  .gitignore  ADMIN.md  README.md  index.ts  package.json  test-tools.ts
lib/: colors.ts  commands.ts  config.ts  rag.ts  session.ts  stream.ts  tools.ts  tts.ts  types.ts
postgres-pgvector/: Dockerfile  cleanup-db.ts  test-embedding.ts
tts-server/: README.md  main.py  pyproject.toml
