[project]
name = "tts-server"
version = "0.1.0"
description = "Pocket-sized text-to-speech hub for llm-rx-chat"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "numpy>=2",
    "torch>=2.5.0",
    "pydantic>=2",
    "sentencepiece>=0.2.1",
    "beartype>=0.22.5",
    "safetensors>=0.4.0",
    "typer>=0.10.0",
    "typing_extensions>=4.0.0",
    "fastapi>=0.100",
    "uvicorn>=0.13.0",
    "python-multipart>=0.0.21",
    "scipy>=1.5.0",
    "einops>=0.4.0",
    "huggingface_hub>=0.13.0",
    "requests>=2.20.0",
    "pocket-tts",
    "pydub"
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
python-preference = "only-managed"
